<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="refresh">Refresh points</string>
    <string name="app_name" translatable="false">GeTS Supplement</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Authorization</string>
    <string name="error_authorization">Authorization error</string>
    <string name="action_catalogue">Points catalogue</string>
    <string name="title_activity_add_new_point">Add a point</string>
    <string name="activity_addnewpoint_mapview_info">To change marker location, click on the desirable location at the map</string>
    <string name="str_point_name">Point name</string>
    <string name="str_description">Description (optional)</string>
    <string name="str_url">URL (optional)</string>
    <string name="str_user_my_location">Use my location</string>
    <string name="plus" translatable="false">+</string>
    <string name="action_add_new_point">Add new point</string>
    <string name="done">Done</string>

    <string name="mapbox_id_street" translatable="false">ksarkes.279c7439</string>
    <string name="mapbox_token" translatable="false">pk.eyJ1Ijoia3NhcmtlcyIsImEiOiJjOTBlMTdkOWFlYTE1OGNlYjU1YWI2NTc3OTk2YmZhZSJ9.Nqsg_A3M5YrEWqwoZ5fdYA</string>
    <string name="mapbox_style_url" translatable="false">mapbox://styles/ksarkes/cirizl9l20004hgm5dovjwher</string>

    <string name="successful_download">Points have been loading successfully</string>

    <string name="no_gps">For using this function please turn on geolocation</string>
    <string name="no_network">No network connection found. You can save point locally and upload it later.</string>
    <string name="saved_to_local_db">Saved to local database</string>
    <string name="delete">Delete</string>
    <string name="enter_name_description_url">Пожалуста введите имя, рейтинг и категорию препятствия</string>
    <string name="enter_valid_url">Please, enter a valid URL address</string>
    <string name="choose_category">Choose category</string>
    <string name="title_activity_category">Categories</string>
    <string name="title_activity_category_actions">Actions with categories</string>
    <string name="title_activity_appinfo">About</string>
    <string name="change_view" translatable="false">Change view</string>
    <string name="rating">Rating:&#160;</string>
    <string name="cant_determine_location">Can\'t determine location</string>
    <string name="successuflly_sent">Successfully sent to server</string>
    <string name="category">Category: </string>
    <string name="category_description">Category description: </string>
    <string name="error_deleting_point">Error while deleting point</string>
    <string name="network_error_authorization">To continue the process, connect to the internet and restart application</string>

    <string name="action_publish">Publish points</string>
    <string name="action_unpublish">Unpublish points</string>
    <string name="action_gps">GPS activating</string>

    <string name="successful_publish">Category have been publishing successfully</string>
    <string name="unsuccessful_publish">Category have not been publishing</string>
    <string name="repeated_publish">Category have already published</string>

    <string name="successful_unpublish">Category have been unpublishing successfully</string>
    <string name="unsuccessful_unpublish">Category have not been unpublishing</string>
    <string name="repeated_unpublish">Category have already unpublished</string>

    <string name="successful_edit">Editing has been done successfully</string>
    <string name="unsuccessful_edit">Editing has not been done</string>
    <string name="category_actions">Actions with categories</string>

    <string name="app_info">Application version:</string>
    <string name="activity_addpoint_magnet_info">Activate point magnet</string>

    <string name="storage_path_sd_card">SD Card</string>
    <string name="storage_path_external">External</string>
    <string name="storage_path_internal">Internal</string>
    <string name="text_download_negative">Don\'t load</string>
    <string name="text_download_positive">Yes, load it</string>
    <string name="text_download_message">Road graph update is available</string>
    <string name="toast_download_start">Graph is loading</string>
    <string name="toast_download_error">There is an error during the graph loading</string>
    <string name="toast_download_success">Graph has been loaded successfully</string>
    <string name="unsuccessful_download">Download error</string>
    <string name="unsuccessuflly_sent">Send error</string>
    <string name="user_info_email">Email: %s</string>
    <string name="user_info_name">Name: %s</string>
    <string name="user_info_trusted">Points publishing allowed: %s</string>
    <string name="title_logout">Logout</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="no_cached_points">No points to send</string>
    <string name="menu_title_queue">Queue</string>
    <string name="menu_title_profile">Profile</string>
    <string name="menu_title_privacy">Privacy</string>
    <string name="menu_title_map">Map</string>
    <string name="menu_title_info">Info</string>
    <string name="internal_error">Internal error</string>
    <string name="error_auth_reqiured">You should be logged in before loading points</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in">Signed in</string>
    <string name="make_screenshot">Send screenshot</string>

</resources>
