<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_fragment"
            android:title="@string/menu_title_map"/>
        <item
            android:id="@+id/nav_favourite_fragment"
            android:title="@string/menu_title_profile" />
        <item
            android:id="@+id/nav_orders_fragment"
            android:title="@string/menu_title_queue" />
        <item
            android:id="@+id/nav_profile_fragment"
            android:title="@string/menu_title_policy" />
        <item
            android:id="@+id/nav_bonuses_fragment"
            android:title="@string/menu_title_info" />
    </group>
</menu>