<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.MapActivity">

    <item android:id="@+id/follow_location"
        android:title="@string/action_gps"
        android:icon="@drawable/ic_follow"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item android:id="@+id/action_category_actions"
        android:title="@string/category_actions"
        android:icon="@drawable/ic_category_actions"
        android:orderInCategory="2"
        android:visible="false"
        app:showAsAction="always"/>

    <item android:id="@+id/activity_map_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item android:id="@+id/action_add"
        android:title="@string/action_add_new_point"
        android:icon="@drawable/ic_action_point_new"
        android:orderInCategory="4"
        app:showAsAction="always"/>

</menu>
