<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="oss.fruct.org.getssupplement.AddNewPointActivity"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.mapbox.mapboxsdk.views.MapView
                android:id="@+id/activity_addpoint_mapview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="250dp"
                android:clickable="true"
                mapbox:mapid="@string/mapbox_id_street"/>

            <ImageButton
                android:id="@+id/activity_addpoint_location"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location"
                style="@style/ImageButtonNoBackgroundPadding"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp">

                <ImageButton
                    android:id="@+id/activity_addpoint_zoom_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_zoom_in"
                    style="@style/ImageButtonNoBackground"/>


                <ImageButton
                    android:id="@+id/activity_addpoint_zoom_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_zoom_out"
                    style="@style/ImageButtonNoBackground"/>


            </LinearLayout>

        </RelativeLayout>


        <EditText
            android:id="@+id/activity_addpoint_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_point_name"
            style="@style/ShortTextEntry"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:gravity="center">

            <Spinner
                android:id="@+id/activity_addpoint_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>

            <ImageButton
                android:id="@+id/activity_addpoint_category_new"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_plus"
                style="@style/ImageButtonNoBackgroundPadding"/>

        </LinearLayout>

        <EditText
            android:id="@+id/activity_addpoint_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_description"
            style="@style/ShortTextEntry"/>

        <EditText
            android:id="@+id/activity_addpoint_url"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_url"
            style="@style/ShortTextEntry"/>

        <!-- Location block -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_addnewpoint_mapview_info"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/activity_addpoint_no_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_network"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:visibility="gone"/>


    </LinearLayout>

    </ScrollView>