<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar" />

        <WebView
            android:id="@+id/wvPolicy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone"
            android:layout_below="@+id/toolbar" />

        <ProgressBar
            android:id="@+id/pbLoadInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/Theme.GetsTheme"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:id="@+id/llContainer"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvUsername"
                style="@style/PrimaryTextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/user_info_name" />

            <TextView
                android:id="@+id/tvEmail"
                style="@style/PrimaryTextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/user_info_email" />

            <TextView
                android:id="@+id/tvTrusted"
                style="@style/PrimaryTextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/user_info_trusted" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_logout"
            android:layout_margin="@dimen/dp16"
            android:background="@color/accent"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nvMain"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_drawer_menu" />

</android.support.v4.widget.DrawerLayout>
